arrow align fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -125,6 +125,7 @@ section.o-psihoterapiji {
   cursor: pointer;
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   text-align: center;
   padding: 2rem;
